# 3DRayTracer

./: CMakeLists.txt  README.md
includes/: camera.h  canvas.h  computations.h  intersection.h  light.h  lighting.h  material.h  math.h  ray.h  sphere.h  test.h  world.h
src/: camera.cpp  canvas.cpp  computations.cpp  intersection.cpp  lighting.cpp  main.cpp  math.cpp  ray.cpp  sphere.cpp  test.cpp  world.cpp
